--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "puppeteer-starter-code",
   "version": "1.0.0",
   "description": "starter code for any puppeteer project",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "ts-node-esm src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/desertsniper87/puppeteer-typescript-starter#readme",
   "dependencies": {
-    "puppeteer": "^19.3.0"
+    "puppeteer": "^19.3.0",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "typescript": "^4.9.3"
   }
 }
